# valence-protocol

./: .gitignore  .gitmodules  .taplo.toml  404.html  CNAME  Cargo.toml  LICENSE  README.md  background.html  examples.html  flake.nix  index.html  introduction.html  justfile  opt.sh  print.html  searchindex.js  searchindex.json  security.html  test.json  toc.html  toc.js
contracts/accounts/account_factory/: Cargo.toml
contracts/accounts/base_account/: Cargo.toml  README.md
contracts/accounts/interchain_account/: Cargo.toml  README.md
contracts/accounts/jit_account/: Cargo.toml
contracts/accounts/service_account/: Cargo.toml  README.md
contracts/accounts/storage_account/: Cargo.toml  README.md
contracts/authorization/: Cargo.toml  README.md
contracts/authorization/schema/: valence-authorization.json
contracts/authorization/src/: authorization.rs  contract.rs  domain.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/conditional-branch/: Cargo.toml
contracts/conditional-branch/src/: contract.rs  error.rs  icq.rs  lib.rs  msg.rs  state.rs  tests.rs
contracts/encoders/broker/: Cargo.toml  README.md
contracts/encoders/evm-encoder/: Cargo.toml  README.md
contracts/libraries/astroport-withdrawer/: Cargo.toml  README.md
contracts/libraries/clearing-queue/: Cargo.toml  README.md
contracts/libraries/duality-withdrawer/: Cargo.toml  README.md
contracts/libraries/ica-cctp-transfer/: Cargo.toml  README.md
contracts/libraries/ica-ibc-transfer/: Cargo.toml  README.md
contracts/libraries/icq-querier/: Cargo.toml  README.md
contracts/libraries/magma-withdrawer/: Cargo.toml  README.md
contracts/libraries/mars-withdrawer/: Cargo.toml  README.md
contracts/libraries/neutron-icq-querier/: Cargo.toml  README.md
contracts/libraries/osmosis-cl-lper/: Cargo.toml  README.md
contracts/processor/: Cargo.toml  README.md
contracts/processor/schema/: valence-processor.json
contracts/processor/src/: callback.rs  contract.rs  error.rs  lib.rs  msg.rs  queue.rs  state.rs
contracts/program-registry/: Cargo.toml  README.md
contracts/program-registry/.cargo/: config.toml
contracts/program-registry/schema/: valence-program-registry.json
contracts/program-registry/src/: contract.rs  error.rs  state.rs
contracts/workflow-registry/: Cargo.toml  README.md
contracts/workflow-registry/src/: contract.rs  error.rs  state.rs
e2e/: Cargo.toml  README.md
e2e/chains/: juno_osmosis.json  neutron.json  neutron_juno.json  neutron_noble.json  neutron_noble_osmosis.json  neutron_osmosis.json  neutron_persistence.json
e2e/examples/: conditional_lp.rs  eth_test.rs  eth_test2.rs  eth_test3.rs  ethereum_integration_tests.rs  ethereum_test.rs  forked_anvil.rs  ibc_transfer_juno_ntrn.rs  ibc_transfer_ntrn_juno.rs  ibc_transfer_ntrn_juno_gaia_pfm.rs  ibc_transfer_osmo_juno_gaia_pfm.rs  ibc_transfer_osmo_ntrn.rs  ica_libraries.rs  icq_test.rs  manager_server_dev.rs  manager_test.rs  middleware_icq_test.rs  osmo_gamm.rs  persistence_ls.rs  polytone.rs  splitter_program_setup.rs  token_swap.rs  two_party_pol_astroport_neutron.rs  vault.rs
e2e/examples/account_factory/: Cargo.toml  README.md
e2e/examples/eth_btc_vault/: README.md  runner.rs  strategist.rs  strategy.rs  strategy_config.rs
e2e/examples/eth_cctp_vault/: evm.rs  neutron.rs  program.rs  vault.rs
e2e/examples/eth_eureka_vault/: evm.rs  program.rs  vault.rs
e2e/examples/eth_to_base_vault_pancake/: base.rs  ethereum.rs  vault.rs
e2e/examples/eth_vault/: ethereum.rs  evm.rs  mock_cctp_relayer.rs  neutron.rs  noble.rs  program.rs  strategist.rs  utils.rs  vault.rs
e2e/examples/one_way_vault/: vault.rs
e2e/hyperlane/config/: config.json
e2e/polytone_contracts/: polytone_note.wasm  polytone_voice.wasm
e2e/src/utils/: astroport.rs  authorization.rs  base_account.rs  ethereum.rs  file.rs  hyperlane.rs  ibc.rs  icq.rs  manager.rs  mock_cctp_relayer.rs  mod.rs  noble.rs  osmosis.rs  parse.rs  persistence.rs  polytone.rs  processor.rs  solidity_contracts.rs  vault.rs  worker.rs
examples/osmo_gamm/: Cargo.toml
examples/osmo_gamm/src/: lib.rs  osmo_gamm.rs  osmo_gamm_test.rs
local-interchaintest/: Cargo.toml  README.md  code_id_cache_neutron_1729246095.json
local-interchaintest/chains/: juno_osmosis.json  neutron.json  neutron_juno.json  neutron_osmosis.json  neutron_persistence.json
local-interchaintest/configs/: config_dev.toml  logs.json
local-interchaintest/examples/: conditional_lp.rs  ethereum_integration_tests.rs  ethereum_test.rs  ethereum_token_swap.rs  ibc_transfer_juno_gaia_ntrn_pfm.rs  ibc_transfer_juno_ntrn.rs  ibc_transfer_ntrn_juno.rs  ibc_transfer_ntrn_juno_gaia_pfm.rs  ibc_transfer_osmo_juno_gaia_pfm.rs  ibc_transfer_osmo_ntrn.rs  ibc_transfer_pfm_map.rs  icq_test.rs  interchain_querier.rs  manager_server_dev.rs  manager_test.rs  middleware_icq_test.rs  open_pol.rs  osmo_cl.rs  osmo_gamm.rs  persistence_ls.rs  polytone.rs  rebalancer.rs  rebalancer_protocol_guild.rs  single_party_pol_astroport.rs  test.rs  token_swap.rs  two_party_pol_astroport_neutron.rs
local-interchaintest/hyperlane/config/: config.json
local-interchaintest/hyperlane_contracts/cosmwasm/: hpl_hook_pausable.wasm
local-interchaintest/polytone_contracts/: polytone_proxy.wasm
local-interchaintest/rebalancer_contracts/: auction.wasm  auctions_manager.wasm  price_oracle.wasm  rebalancer.wasm  services_manager.wasm
program-manager/: Cargo.toml
program-manager/schema/: valence-program-manager.json
program-manager/src/: account.rs  bridge.rs  config.rs  connectors.rs  error.rs  helpers.rs  lib.rs  library.rs  macros.rs  mock_api.rs  program_config.rs  program_config_builder.rs  program_migration.rs  program_update.rs  service.rs  tests.rs  workflow_update.rs
workflow-manager/: Cargo.toml
workflow-manager/conf/: chains.toml  contracts.toml  neutron_bridges.toml
workflow-manager/src/: account.rs  bridge.rs  bridges.rs  config.rs  connectors.rs  context.rs  error.rs  helpers.rs  lib.rs  macros.rs  service.rs  tests.rs  workflow_config.rs  workflow_config_builder.rs  workflow_update.rs
zk/tests/: Cargo.toml
(+1161 files in other folders)
