[package]
name       = "valence-e2e"
edition    = { workspace = true }
license    = { workspace = true }
version    = { workspace = true }
repository = { workspace = true }

[[example]]
name = "vault"
path = "examples/eth_vault/vault.rs"

[[example]]
name = "eth_to_base_vault_pancake"
path = "examples/eth_to_base_vault_pancake/vault.rs"

[dependencies]
localic-std                          = { git = "https://github.com/strangelove-ventures/interchaintest", branch = "main" }
localic-utils                        = { git = "https://github.com/timewave-computer/localic-utils", branch = "main" }
sha2                                 = { workspace = true }
hex                                  = { workspace = true }
serde_json                           = { workspace = true }
env_logger                           = { workspace = true }
log                                  = { workspace = true }
rand                                 = "0.8.5"
cosmos-grpc-client                   = "3.0.1"
persistence-std                      = "1.2.0"
polytone-note                        = { git = "https://github.com/DA0-DA0/polytone", rev = "f70440a" }
polytone-voice                       = { git = "https://github.com/DA0-DA0/polytone", rev = "f70440a" }
cosmwasm-std                         = { workspace = true }
cosmwasm-std-old                     = { package = "cosmwasm-std", version = "1.5.7" }
cw-utils                             = { workspace = true }
valence-authorization                = { workspace = true }
valence-processor                    = { workspace = true }
valence-authorization-utils          = { workspace = true }
valence-processor-utils              = { workspace = true }
valence-account-utils                = { workspace = true }
valence-storage-account              = { workspace = true }
valence-interchain-account           = { workspace = true }
valence-library-utils                = { workspace = true }
valence-splitter-library             = { workspace = true }
valence-reverse-splitter-library     = { workspace = true }
valence-forwarder-library            = { workspace = true }
valence-astroport-lper               = { workspace = true }
valence-astroport-withdrawer         = { workspace = true }
valence-astroport-utils              = { workspace = true }
valence-program-manager              = { workspace = true }
valence-program-registry-utils       = { workspace = true }
valence-ibc-utils                    = { workspace = true }
valence-generic-ibc-transfer-library = { workspace = true }
valence-neutron-ibc-transfer-library = { workspace = true }
valence-osmosis-gamm-lper            = { workspace = true }
valence-osmosis-gamm-withdrawer      = { workspace = true }
valence-osmosis-cl-lper              = { workspace = true }
valence-osmosis-cl-withdrawer        = { workspace = true }
valence-osmosis-utils                = { workspace = true }
valence-encoder-broker               = { workspace = true }
valence-encoder-utils                = { workspace = true }
valence-neutron-ic-querier           = { workspace = true }
valence-middleware-broker            = { workspace = true }
valence-middleware-osmosis           = { workspace = true }
valence-middleware-utils             = { workspace = true }
valence-middleware-asserter          = { workspace = true }
valence-test-icq-lib                 = { workspace = true }
valence-chain-client-utils           = { workspace = true, features = ["test-utils"] }
valence-ica-cctp-transfer            = { workspace = true }
valence-ica-ibc-transfer             = { workspace = true }
tokio                                = { workspace = true }
osmosis-std                          = { workspace = true }
neutron-sdk                          = { workspace = true }
alloy                                = { version = "0.9.2", features = ["full"] }
alloy_primitives_encoder             = { package = "alloy-primitives", version = "0.7.7" }
alloy_sol_types_encoder              = { package = "alloy-sol-types", version = "0.7.7" }
hpl-interface                        = { git = "https://github.com/many-things/cw-hyperlane", rev = "d07e55e" }
serde-json-wasm                      = "0.5.2"
bech32                               = "0.11.0"
bollard                              = "0.18.1"
futures-util                         = "0.3"
toml                                 = "0.8.19"
async-trait                          = "0.1.77"
serde                                = "1.0.219"
