[package]
name       = "local-interchaintest"
edition    = { workspace = true }
license    = { workspace = true }
version    = { workspace = true }
repository = { workspace = true }

[dependencies]
localic-std                        = { git = "https://github.com/strangelove-ventures/interchaintest", branch = "main" }
localic-utils                      = { git = "https://github.com/timewave-computer/localic-utils", branch = "main" }
valence-local-interchaintest-utils = { workspace = true }
valence-authorization-utils        = { workspace = true }
valence-processor-utils            = { workspace = true }
hex                                = { workspace = true }
serde_json                         = { workspace = true }
env_logger                         = "0.11.5"
log                                = "0.4.22"
polytone-note                      = { git = "https://github.com/DA0-DA0/polytone", rev = "f70440a" }
polytone-voice                     = { git = "https://github.com/DA0-DA0/polytone", rev = "f70440a" }
cosmwasm-std                       = "1.5.7"
