[package]
name       = "workflow-manager"
edition    = { workspace = true }
license    = { workspace = true }
version    = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std   = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
aho-corasick   = "1.1"
services-utils = { workspace = true }

valence-splitter         = { workspace = true }
valence-reverse-splitter = { workspace = true }
