[package]
name       = "workflow-manager"
edition    = { workspace = true }
license    = { workspace = true }
version    = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std       = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
aho-corasick       = "1.1"
serde_json_any_key = "2"
async-trait = "0.1.81"

services-utils      = { workspace = true }
valence-macros      = { workspace = true }
valence-authorization-utils = { workspace = true }

valence-splitter         = { workspace = true }
valence-reverse-splitter = { workspace = true }
valence-base-account     = { workspace = true }

cosmos-grpc-client = "3.0.1"
tokio              = "1.39"
dhat               = "0.3.3"
futures            = "0.3.3"
config             = { version = "0.14.0", features = ["toml"] }
tracing            = "0.1"
tracing-subscriber = "0.3"
glob               = "0.3"
