[package]
name       = "workflow-manager"
edition    = { workspace = true }
license    = { workspace = true }
version    = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
cw-ownable   = { workspace = true }

service-utils                  = { workspace = true }
valence-macros                  = { workspace = true }
valence-authorization-utils     = { workspace = true }
valence-processor-utils         = { workspace = true }
valence-workflow-registry-utils = { workspace = true }
service-base                    = { workspace = true }

valence-splitter          = { workspace = true }
valence-reverse-splitter  = { workspace = true }
valence-base-account      = { workspace = true }
valence-authorization     = { workspace = true }
valence-processor         = { workspace = true }
valence-workflow-registry = { workspace = true }

aho-corasick       = "1.1"
serde_json_any_key = "2"
cosmos-grpc-client = "3.0.1"
tokio              = "1.39"
dhat               = "0.3.3"
futures            = "0.3.3"
config             = { version = "0.14.0", features = ["toml"] }
glob               = "0.3"
strum              = { version = "0.26", features = ["derive"] }
async-trait        = "0.1.81"
bech32             = "0.11.0"
prost              = "0.12"
prost-types        = "0.12"
hex                = "0.4"
once_cell          = "1.19"
dashmap            = "6.1.0"
tracing            = "0.1"
tracing-subscriber = "0.3"