[package]
name        = "valence-authorization"
version     = { workspace = true }
edition     = { workspace = true }
authors     = ["Timewave Labs"]
description = "CosmWasm Smart Contract that will contain the authorization table that defines execution permissions in the workflow"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std                = { workspace = true }
cw-storage-plus             = { workspace = true }
cosmwasm-schema             = { workspace = true }
thiserror                   = { workspace = true }
cw2                         = { workspace = true }
cw-ownable                  = { workspace = true }
valence-authorization-utils = { workspace = true }
valence-processor-utils     = { workspace = true }
neutron-sdk                 = { workspace = true }
cw-utils                    = { workspace = true }
serde_json                  = { workspace = true }
polytone                    = { workspace = true }

[dev-dependencies]
neutron-test-tube    = { workspace = true }
margined-neutron-std = { workspace = true }
serde                = { workspace = true }
hex                  = { workspace = true }
valence-test-service = { workspace = true }
valence-processor    = { workspace = true }
