[package]
name = "valence-processor"
version = { workspace = true }
edition = { workspace = true }
authors = ["Timewave Labs"]
description = "CosmWasm Smart Contract that executes the messages on each service/account of the workflow by iterating over queues"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
