[package]
name        = "valence-processor"
version     = { workspace = true }
edition     = { workspace = true }
authors     = { workspace = true }
description = "CosmWasm Smart Contract that executes the messages on each library/account of the program by iterating over queues when ticked"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std                = { workspace = true }
cw-storage-plus             = { workspace = true }
cosmwasm-schema             = { workspace = true }
thiserror                   = { workspace = true }
cw2                         = { workspace = true }
valence-processor-utils     = { workspace = true }
valence-authorization-utils = { workspace = true }
valence-gmp-utils           = { workspace = true }
cw-utils                    = { workspace = true }
serde_json                  = { workspace = true }
